# goose

./: 404.html  index.html  sitemap.xml
.goose/memory/: goose_memory.md  goose_session_detail.md  goose_session_implementation.md  goosed.txt
assets/js/: 0e8f5fe6.71ab243d.js  17153df0.17d7195e.js  17153df0.2fcdd863.js  17de5c69.89c6b443.js  17de5c69.b82b6167.js  17de5c69.d088bf86.js  23c2c20d.04f66c92.js  23c2c20d.410ac187.js  23c2c20d.52657a2a.js  23c2c20d.8963d2ca.js  23c2c20d.d2cfce0b.js  23c2c20d.d861f8f8.js  2fb23c01.6611b61a.js  384b152f.19791bd0.js  4cc4c9f0.e396ebe7.js  536f842f.98e044fd.js  576fd63b.4fd07034.js  576fd63b.eab97c6a.js  5bac4ade.09ab7ccd.js  5bac4ade.82a76ca8.js  5c59d9c5.07000836.js  5c59d9c5.71996cf2.js  62062511.1cd91e09.js  62062511.e3a0913c.js  64085bbc.c21c84a5.js  64085bbc.c6c86470.js  6acc8ddf.7522f7e7.js  70657f53.17a9311a.js  70657f53.91182f52.js  70657f53.bb529116.js  70657f53.e7ad1467.js  70657f53.f3cf69e6.js  72d8e3e6.a1392410.js  73b92c7e.0979180b.js  73b92c7e.67b6c3e6.js  73b92c7e.723edd18.js  73b92c7e.984c8d76.js  73b92c7e.d2392c7c.js  74fcfdc1.96be50b5.js  74fcfdc1.c69e1b6c.js  (+50 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
crates/goose-bot/: .gitignore  Cargo.toml  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
crates/goose-bot/src-tauri/: Cargo.toml  tauri.conf.json
crates/goose-bot/src-tauri/src/: lib.rs  main.rs
docs/goose-architecture/: index.html
docs/persistent/: mcp.md  (+21 more)
extensions/: index.html
markdown-page/: index.html
prompt-library/: index.html
(+149 files in other folders)
