[package]
name = "goose-bot-tauri"
version = "0.1.0"
description = "Goose Bot Tauri App"
authors = ["Goose Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "goose_bot_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
#tauri-plugin-shell = { version = "2" }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Add goose-cli as a dependency
goose-cli = { path = "../../goose-cli" }

